@@ -1,0 +1,2 @@
+Licensed under GPL license v2.
+Copyright (c) 2003-2010 Artica Soluciones Tecnologicas
