@@ -1,3 +1,11 @@
+2010-09-17  Junichi Satoh  <junichi@rworks.jp>
+
+	* SunOS/make_solaris_package/README,
+	SunOS/make_solaris_package/copyright,
+	SunOS/make_solaris_package/make_solaris_package.sh,
+	SunOS/make_solaris_package/prototype: Added agent package builder
+	for Solaris.
+
 2010-08-17  Junichi Satoh  <junichi@rworks.jp>
 
 	* pandora_agent_daemon, tentacle_client: Added support for Solaris
