@@ -1,3 +1,11 @@
+2010-09-17  Junichi Satoh  <junichi@rworks.jp>
+
+	* unix/SunOS/make_solaris_package/README,
+	unix/SunOS/make_solaris_package/copyright,
+	unix/SunOS/make_solaris_package/make_solaris_package.sh,
+	unix/SunOS/make_solaris_package/prototype: Added agent package builder
+	for Solaris.
+
 2010-08-17  Junichi Satoh  <junichi@rworks.jp>
 
 	* unix/pandora_agent_daemon, unix/tentacle_client: Added support for
